--- a/README
+++ b/README
@@ -1,1 +1,15 @@
+#1.14.4
 
+[Kettle](https://github.com/KettleFoundation/Kettle)
+
+# 1.12.2
+
+[Kettle](https://github.com/KettleFoundation/Kettle)
+
+# 1.10.2
+
+# 1.7.10
+
+[Contigo fork of Thermos](https://github.com/gcallant/Contigo)
+[Thermos (fork of kCauldron, source unknown)](https://github.com/CyberdyneCC/Thermos)
+[Cauldron (was MCPC+)](https://github.com/Techcable/Cauldron-Old)
